[package]
name = "firefly-input-test"
version = "0.4.0"
rust-version = "1.92.0"
edition = "2024"

[dependencies]
firefly-rust = "0.13.1"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true      # Enable link-time optimization
