[package]
name = "firefly-input-test"
version = "0.4.1"
rust-version = "1.95.0"
edition = "2024"

[dependencies]
firefly-rust = "0.14.0"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "s" # Optimize for speed.
lto = true      # Enable link-time optimization
